<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    app:cardElevation="12dp"
    app:cardCornerRadius="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#3c4247"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hospital"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/centerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/uphc_8_smc"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minAgeLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_18"
                android:fontFamily="@font/ubuntu_bold"
                android:paddingVertical="1dp"
                android:paddingHorizontal="8dp"
                android:textStyle="bold"
                android:textColor="@color/primaryButtonColor"
                android:textSize="16sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/siliguri_uphc_8_ward_no_47_paticolony"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

        <TextView
            android:id="@+id/state_dist_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/west_bengal_darjeeling"
            android:textColor="@color/black"
            android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/dateText"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="12dp">

            <TextView
                android:id="@+id/availableText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_slots"
                android:textColor="@color/black"
                android:fontFamily="@font/ubuntu_medium"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dose_bg"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/dose1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/_1st_dose"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/dose_bg"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/dose2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/_2nd_dose"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vaccineName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/covishiled"
                android:padding="2dp"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/vaccinationFeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/paid"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:layout_toStartOf="@id/vaccinePrice"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/vaccinePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/_780"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>