<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity"
    android:background="@color/bg_color">

    <ImageView
        android:id="@+id/homeImg"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@id/editTextPincode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_undraw_medical_care_movn"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_a_pincode_and_date_to_continue"
        android:textAlignment="center"
        android:textSize="17sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextPincode"
        app:layout_constraintTop_toBottomOf="@id/homeImg"/>

    <EditText
        android:id="@+id/editTextPincode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/pin"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        android:autofillHints=""
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/datePickerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPincode"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:theme="@style/Button.White"
        android:padding="10dp"
        style="?android:spinnerStyle"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/dd_mm_yy"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_background"
        android:inputType="date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/bg_color"
        android:background="@drawable/btn_background"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@id/datePickerBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/wave"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />


</androidx.constraintlayout.widget.ConstraintLayout>